--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "back-ecomm",
   "version": "1.0.0",
-  "description": "",
   "main": "router.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon router.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
-  }
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.5",
+    "validator": "^11.1.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/2nour/e-comm-back.git"
+  },
+  "bugs": {
+    "url": "https://github.com/2nour/e-comm-back/issues"
+  },
+  "homepage": "https://github.com/2nour/e-comm-back#readme",
+  "description": ""
 }
